src/components/PhoneInput/style.scss
@import '../../styles/base';

:global {
  :local(.phoneInput) {
    @extend %type--body;

    &.react-phone-number-input {
      &:hover {
        .react-phone-number-input__input {
          @extend %input--wrapper--hover;
        }

        .react-phone-number-input__input--disabled {
          @extend %input--wrapper--disabled;
        }

        .Select-control {
          border-right-color: $cGray200;
        }
      }

      &--invalid,
      &--invalid:hover {
        .react-phone-number-input__input {
          @extend %input--wrapper--error;
        }

        .Select-control {
          border-right-color: $cWarningRed;
        }
      }

      &--focus {
        .react-phone-number-input__input {
          @extend %input--wrapper--focus;
        }

        .Select-control {
          border-right-color: $cGray200;
        }
      }
    }

    .react-phone-number-input * {
      box-sizing: border-box;
    }

    .react-phone-number-input__row {
      height: 40px;
      position: relative;
    }

    .react-phone-number-input__error {
      display: none;
    }

    .Select {
      display: flex;
      justify-content: stretch;
      min-width: 100px;
      position: absolute;
      top: 0;
      left: 0;
      bottom: 0;
      right: 0;

      &.is-disabled,
      &.is-disabled:hover {
        .Select-control {
          background-color: white;
          border-right-color: $cGray400;
          cursor: not-allowed;
        }

        .Select-placeholder {
          color: $cGray40;
        }

        .flag-icon-none {
          background-color: $cGray30;
        }

        .Select-arrow {
          border-color: $cGray40 transparent transparent;
        }
      }

      &.is-focused > .Select-control {
        background: $cGray600;
      }

      &.is-focused:not(.is-open) > .Select-control {
        border-color: $cGray300;
        box-shadow: none;
      }
    }

    .Select-control {
      background: $cGray600;
      border: 0;
      border-right: 1px solid $cGray300;
      border-radius: $inputRadius 0 0 $inputRadius;
      margin: 1px 0 1px 1px;
      width: 100px;
      height: 38px;
      z-index: 20;

      &:hover {
        box-shadow: none;
        cursor: pointer;
      }
    }

    .Select--single .Select-value,
    .Select--single .Select-placeholder {
      align-items: center;

      display: flex;
      line-height: 20px;
      height: 38px;

      * + * {
        margin-left: 5px;
      }
    }

    .Select--single > .Select-control .Select-value {
      color: $cWeWorkBlack;
    }

    .Select-placeholder {
      color: $cGray200;
    }
    .Select-input {
      height: 100%;
    }
    .Select-option {
      padding: 10px 5px;
    }
    .Select-option,
    .Select-option.is-focused {
      color: $cWeWorkBlack;
    }
    .Select-option.is-focused,
    .Select-option.is-selected {
      background: $cGray30;
    }

    .Select-arrow,
    .Select-arrow-zone:hover .Select-arrow,
    .Select.is-open > .Select-control .Select-arrow {
      border-width: 6px 5px 0;
      border-color: $cGray200 transparent transparent;
      top: 0;
    }

    .Select-menu-outer {
      border: 0;
      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
    }

    .react-phone-number-input__input {
      @extend %input;
      @extend %input--wrapper;

      padding: 5px 5px 5px 105px;
      position: absolute;
      top: 0;
      left: 0;
      bottom: 0;
      right: 0;
      z-index: 10;

      &:disabled {
        @extend %input--wrapper--disabled;
      }
    }

    .react-phone-number-input__icon {
      border: 0;
    }

    .flag-icon-none {
      height: 1em;
      background: $cGray200;
    }
  }
}

.optionRow {
  display: flex;
  align-items: center;

  > * + * {
    margin-left: 5px;
  }

  .dialCode {
    font-size: 11px;
    color: $cGray200;
  }

  .countryName {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }
}

